# PMondriaan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/bulk/Bulk-develop/: Makefile
ext/bulk/Bulk-develop/include/bulk/: algorithm.hpp
ext/bulk/bulk/: Makefile
ext/bulk/bulk/examples/: partitioning.cpp
ext/bulk/bulk/include/bulk/: algorithm.hpp
include/: algorithm.hpp  bisect.hpp  hypergraph.hpp  label_propagation.hpp  options.hpp  pmondriaan.hpp  readhypergraph.hpp  recursive_bisection.hpp  work_item.hpp
include/hypergraph/: contraction.hpp  hypergraph.hpp  readhypergraph.hpp
include/multilevel_bisect/: coarsen.hpp  initial_partitioning.hpp  label_propagation.hpp  sample.hpp  uncoarsen.hpp
include/multilevel_bisect/KLFM/: KLFM.hpp  KLFM_parallel.hpp  gain_buckets.hpp
include/util/: interval.hpp  random_hypergraph.hpp  write_partitioning.hpp
src/: bisect.cpp  label_propagation.cpp  readhypergraph.cpp  recursive_bisection.cpp
src/hypergraph/: contraction.cpp  hypergraph.cpp  readhypergraph.cpp
src/multilevel_bisect/: coarsen.cpp  initial_partitioning.cpp  label_propagation.cpp  sample.cpp  uncoarsen.cpp
src/multilevel_bisect/KLFM/: KLFM.cpp  KLFM_parallel.cpp  gain_buckets.cpp
src/util/: random_hypergraph.cpp  write_partitioning.cpp
test/: bipartition.cpp  coarsening.cpp  create_random_hypergraph.cpp  hypergraph.cpp  imbalance.cpp  lp_bisect.cpp  lp_sampling.cpp  parallel_hypergraph.cpp  partition.cpp  random_bisection.cpp  random_sampling.cpp  redistribute.cpp  renumbering.cpp  test_CLI11.cpp  test_bulk.cpp  test_hypergraph.cpp  test_label_propagation.cpp
test/data/matrices/: Unconfirmed 59622.crdownload
test/data/matrices/Trec5/: Trec5.mtx
test/data/matrices/gemat11/: gemat11.mtx
test/data/matrices/lp_dfl001/: lp_dfl001.mtx
test/data/matrices/mhd4800b/: mhd4800b.mtx
test/data/matrices/random/: nz5
tools/: 3Dspectralwave2.mtx.hgr.mtxcn.toml  3Dspectralwave2.mtx.hgr.mtxlmo.toml  AGATA.toml  BenElechi1.mtx.hgr.mtxcn.toml  BenElechi1.mtx.hgr.mtxlmo.toml  Chebyshev4.mtx.hgr.mtxcn.toml  Chebyshev4.mtx.hgr.mtxlmo.toml  ESOC.mtx.hgr.mtxcn.toml  ESOC.mtx.hgr.mtxlmo.toml  Emilia_923.mtx.hgr.mtxcn.toml  Emilia_923.mtx.hgr.mtxlmo.toml  F2.mtx.hgr.mtxcn.toml  F2.mtx.hgr.mtxlmo.toml  Hamrle3.mtx.hgr.mtxcn.toml  Hamrle3.mtx.hgr.mtxlmo.toml  PMondriaan.cpp  RM07R.mtx.hgr.mtxcn.toml  RM07R.mtx.hgr.mtxlmo.toml  Rucci1.mtx.hgr.mtxcn.toml  Rucci1.mtx.hgr.mtxlmo.toml  StocF-1465.mtx.hgr.mtxcn.toml  StocF-1465.mtx.hgr.mtxlmo.toml  af_4_k101.mtx.hgr.mtxcn.toml  af_4_k101.mtx.hgr.mtxlmo.toml  af_shell1.mtx.hgr.mtxcn.toml  af_shell1.mtx.hgr.mtxlmo.toml  atmosmodj.mtx.hgr.mtxcn.toml  atmosmodj.mtx.hgr.mtxlmo.toml  defaults.toml  dielFilterV2clx.mtx.hgr.mtxcn.toml  dielFilterV2clx.mtx.hgr.mtxlmo.toml  gearbox.mtx.hgr.mtxcn.toml  gearbox.mtx.hgr.mtxlmo.toml  gupta3.mtx.hgr.mtxcn.toml  gupta3.mtx.hgr.mtxlmo.toml  human_gene2.mtx.hgr.mtxcn.toml  human_gene2.mtx.hgr.mtxlmo.toml  kkt_power.mtx.hgr.mtxcn.toml  kkt_power.mtx.hgr.mtxlmo.toml  mono_500Hz.mtx.hgr.mtxcn.toml  (+169 more)
tools/results/: conf5_0-4x4-10.mtx-k2-p1  dolphins.mtx-k2-p1  dolphins.mtx-k2-p2  dolphins.mtx-k2-p4  dolphins.mtx-k4-p4  dolphins.mtx-k8-p1  dolphins.mtx-k8-p4  gemat11.mtx-k16-p1  gemat11.mtx-k16-p4  gemat11.mtx-k2-p1  gemat11.mtx-k2-p2  gemat11.mtx-k2-p4  gemat11.mtx-k4-p4  lp_cre_b.mtx-k16-p4  lp_cre_b.mtx-k4-p4  lp_cre_b.mtx-k8-p4  lp_fit2d.mtx-k2-p1  mhd4800b.mtx-k16-p4  mhd4800b.mtx-k2-p1  mhd4800b.mtx-k2-p2  mhd4800b.mtx-k2-p4  mhd4800b.mtx-k4-p2  mhd4800b.mtx-k4-p4  mhd4800b.mtx-k8-p4  nz25000.mtx-k16-p4  nz25000.mtx-k4-p4  nz25000.mtx-k8-p4  west0381.mtx-k2-p1  west0381.mtx-k2-p4  west0381.mtx-k7-p4
unittest/: read_mtx_test.cpp  recursive_test.cpp
unittest/hypergraph/: contraction_test.cpp  hypergraph_test.cpp  readhypergraph_test.cpp  simplification_test.cpp  simplify_test.cpp
unittest/multilevel_bisect/: bisect_test.cpp  initial_partitioning_test.cpp  label_propagation_bisect_test.cpp
unittest/multilevel_bisect/KLFM/: KLFM_par_test.cpp  gain_buckets_test.cpp  sort_vertices_test.cpp
unittest/util/: partitioning_to_file_test.cpp
